Project_3/app/kickstarter_app2a/nohup.out
 * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 138-876-003
127.0.0.1 - - [20/Feb/2018 10:37:03] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 10:38:13] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 10:54:45] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 11:30:15] "GET / HTTP/1.1" 200 -
 * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 138-876-003
127.0.0.1 - - [20/Feb/2018 14:25:09] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 16:45:10] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 19:27:36] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 19:36:11] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 20:04:29] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 20:04:30] "GET /static/kickstarter_bostockscatterplot.csv HTTP/1.1" 304 -
127.0.0.1 - - [20/Feb/2018 20:09:05] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 20:24:31] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/Feb/2018 20:36:25] "GET / HTTP/1.1" 200 -
 * Detected change in '/Volumes/BC_Clutch/Dropbox/Programming/BootCamps/Metis/00Bootcamp/McMahon_Metis/Project_3/app/kickstarter_app2a/kickstarter_app2a.py', reloading
 * Restarting with stat
  File "kickstarter_app2a.py", line 1
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
